--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,8 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.3.*",
+        "laravel/framework": "5.2.45",
         "laravelcollective/html": "5.3.*",
-        "cviebrock/eloquent-sluggable": "^4.0",
         "unisharp/laravel-filemanager": "^1.6",
         "intervention/image": "^2.3"
     },
