Dynamic dropdowns added to create plots and bookings. Ability to edit and delete bookings

--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,10 @@
     "require": {
         "php": ">=5.5.9",
         "laravel/framework": "5.2.45",
-        "laravelcollective/html": "5.3.*",
+        "laravelcollective/html": "5.2.6",
         "unisharp/laravel-filemanager": "^1.6",
-        "intervention/image": "^2.3"
+        "intervention/image": "^2.3",
+        "prologue/alerts": "^0.4.1"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
