--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,15 @@
         "unisharp/laravel-filemanager": "^1.6",
         "intervention/image": "^2.3",
         "prologue/alerts": "^0.4.1"
+
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~4.0",
         "symfony/css-selector": "2.8.*|3.0.*",
-        "symfony/dom-crawler": "2.8.*|3.0.*"
+        "symfony/dom-crawler": "2.8.*|3.0.*",
+        "laracasts/generators": "^1.1"
     },
     "autoload": {
         "classmap": [
@@ -49,6 +51,7 @@
         ]
     },
     "config": {
-        "preferred-install": "dist"
+        "preferred-install": "dist",
+        "prefer-stable": true
     }
 }
